[tool.poetry]
name = "line-notify"
version = "0.1.0"
description = "A wrapper for LINE notify API"
license = "MIT"
authors = ["yu7400ki <yu7400ki@gmail.com>"]
readme = "README.md"
packages = [{include = "line_notify", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.7,<4"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
black = "*"
isort = "*"
flake8-builtins = "*"
pre-commit = "*"
pyproject-flake8 = "*"
mypy = "*"
types-requests = "^2.28.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 119
extend-ignore = "E203,"
exclude = [
    ".git",
    ".venv",
    ]

[tool.black]
target-version = ["py37"]
line-length = 119
include = "\\.pyi?$"
exclude = """
(
      \\.git
    | \\.venv
)
"""

[tool.isort]
py_version = 37
profile = "black"
line_length = 119

[tool.mypy]
python_version = "3.7"
warn_unreachable = true
strict_optional = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
