[tool.poetry]
name = "line-notify"
version = "0.2.0"
description = "A wrapper for LINE notify API"
license = "MIT"
authors = ["yu7400ki <yu7400ki@gmail.com>"]
readme = "README.md"
packages = [{include = "line_notify", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.7,<4"
requests = "*"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
black = "*"
isort = "*"
flake8-builtins = "*"
pre-commit = "*"
pyproject-flake8 = "*"
mypy = "*"
types-requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 119
extend-ignore = "E203,"
exclude = [
    ".git",
    ".venv",
    "**/__init__.py",
    ]

[tool.black]
target-version = ["py37"]
line-length = 119
include = "\\.pyi?$"
exclude = """
(
      \\.git
    | \\.venv
    | \\**/__init__.py
)
"""

[tool.isort]
py_version = 37
profile = "black"
line_length = 119

[tool.mypy]
python_version = "3.7"
warn_unreachable = true
strict_optional = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
